[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Dialogs/CharacterSelectionDialog.gd" type="Script" id=1]

[node name="CharacterSelectionDialog" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 120.0
rect_min_size = Vector2( 320, 240 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 20.0

[node name="ButtonPrevious" type="Button" parent="HBoxContainer"]
margin_right = 158.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Previous"

[node name="ButtonNext" type="Button" parent="HBoxContainer"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Next"

[node name="LabelCharacterName" type="Label" parent="."]
margin_top = 24.0
margin_right = 320.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSelect" type="Button" parent="."]
margin_top = 196.0
margin_right = 320.0
margin_bottom = 216.0
disabled = true
text = "Select character"

[node name="ButtonCreate" type="Button" parent="."]
margin_top = 220.0
margin_right = 320.0
margin_bottom = 240.0
text = "Create new character"
[connection signal="pressed" from="HBoxContainer/ButtonPrevious" to="." method="_on_ButtonPrevious_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="ButtonSelect" to="." method="_on_ButtonSelect_pressed"]
[connection signal="pressed" from="ButtonCreate" to="." method="_on_ButtonCreate_pressed"]
